1.9.0.2
========

Switch to PhantomJS 1.9.0

Add windows support [agroszer]

1.7.0.3
=======

Python3 compat

1.7.0.4
=======

Also support linux3

1.7.0.3
=======

Use correct arch (x86_64/i686) for linux systems

1.7.0.2
=======

Use correct octal format for chmod


1.7.0
=====

* Upgrade to casperjs 1.0.0-RC4 and PhantomJS 1.7.0
* Fix executable permissions issues

1.3
===

First "stable" release